# ToolSelectionBenchmark

./: .gitignore  README.md  README_ZH.md  analyze_all_tools_quality.py  analyze_tools_en.py  build_gold_tool_set.py  convert_gold_to_original_format.py  generate_synthetic_tools.py  pyproject.toml  rebuild_embeddings_dedup.py  requirements.txt
analysis_embeddings/: gold_tool_set_report.json  tools_en_gold.jsonl  tools_en_original_dedup.jsonl  tools_en_synthetic_candidates.jsonl  tools_en_synthetic_dedup.jsonl  tools_en_synthetic_metadata.json  tools_en_tool_neighbors.csv
deploy/: SALLOC_GUIDE.md  slurm_install_vllm.sh  slurm_vllm_deploy.sh  slurm_vllm_embedding_deploy.sh  slurm_vllm_embedding_job.sh  slurm_vllm_job.sh  uv_setup.sh
docs/: index.html  quality-check.html  tool-analyzer.html
multi-agent-framework/tools/: tools_en.jsonl
wild-tool-bench/langgraph/: MODES.md
wild-tool-bench/wtb/model_handler/: handler_map.py
wild-tool-bench/wtb/model_handler/api_inference/: OPENAI_EMBEDDINGS.md  langgraph.py  langgraph_app.py  prepare_tool_schemas.py  setup_openai_embeddings.py  tool_schemas_cache.json
