[project]
name = "tool-selection-benchmark"
version = "0.1.0"
description = "Tool Selection Benchmark for LLM Agents"
requires-python = ">=3.10"
dependencies = [
    "requests",
    "pandas",
    "openai",
    "python-dotenv",
    "overrides",
    "tenacity==8.2.2",
    "jieba==0.42.1",
    "rouge==1.0.1",
    "langgraph",
    "ipdb",
]

[project.optional-dependencies]
# Install with: uv sync --extra vllm
vllm = [
    "vllm",
    "transformers",
    "huggingface-hub",
    "accelerate",
    "fastapi",
    "uvicorn[standard]",
]
# Install with: uv sync --extra dev
dev = [
    "pytest",
    "ruff",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["multi-agent-framework", "wild-tool-bench"]

[tool.uv]
# Use the PyPI index for all packages.
# For GPU-specific torch builds, override torch below.
index-url = "https://pypi.org/simple"

[tool.uv.sources]
# Ensures torch is installed with CUDA support when using uv.
# Uncomment and set the correct CUDA version for your cluster:
# torch = { index = "pytorch-cu124" }

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true
